# Junto

./: README.md  jun
backend/: package.json  tsconfig.json
backend/src/controllers/: daoController.ts
backend/src/services/: solanaService.ts
programs/junto/: Anchor.toml  Cargo.toml
programs/junto/src/: instructions.rs  lib.rs
scripts/: deploy.ts
